# pro_se_hallucinations

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
analysis/: __init__.py  hallucination_plots.py  load_data.py  run_all.py  support_plots.py  top_cases.py
data/complaints/gpt-3.5-turbo-0125/: cm_001_01.json  cm_001_01.txt  cm_001_01_evaluation.json  cm_001_02.json  cm_001_02.txt  cm_001_02_evaluation.json  cm_001_03.json  cm_001_03.txt  cm_001_03_evaluation.json  cm_001_04.json  cm_001_04.txt  cm_001_04_evaluation.json  cm_001_05.json  cm_001_05.txt  cm_001_05_evaluation.json  cm_001_06.json  cm_001_06.txt  cm_001_06_evaluation.json  cm_001_07.json  cm_001_07.txt  cm_001_07_evaluation.json  cm_001_08.json  cm_001_08.txt  cm_001_08_evaluation.json  cm_001_09.json  cm_001_09.txt  cm_001_09_evaluation.json  cm_001_10.json  cm_001_10.txt  cm_001_10_evaluation.json  cm_002_01.json  cm_002_01.txt  cm_002_01_evaluation.json  cm_002_02.json  cm_002_02.txt  cm_002_02_evaluation.json  cm_002_03.json  cm_002_03.txt  cm_002_03_evaluation.json  cm_002_04.json  (+860 more)
data/complaints/gpt-4o-2024-11-20/: cm_001_01.json  cm_001_01.txt  cm_001_01_evaluation.json  cm_001_02.json  cm_001_02.txt  cm_001_02_evaluation.json  cm_001_03.json  cm_001_03.txt  cm_001_03_evaluation.json  cm_001_04.json  cm_001_04.txt  cm_001_04_evaluation.json  (+888 more)
scenarios/: __init__.py  custody.jsonl  fact_patterns.py  housing.jsonl  negligence.jsonl
src/: __init__.py  citations.py  courtlistener.py  elements_evaluation.py  evaluation.py  generate_scenarios.py  generation.py  models.py  scenarios.py
(+3000 files in other folders)
