[project]
name = "cs2881-final"
version = "0.1.0"
description = "Evaluating LLM-generated pro se legal complaints for citation hallucination"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.8.1",
    "pydantic>=2.12.5",
    "tqdm>=4.67.1",
    "httpx>=0.27.0",
    "anthropic>=0.40.0",
    "matplotlib>=3.9.0",
    "pandas>=2.2.0",
    "tabulate>=0.9.0",
    "lxml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]
